Added slug endpoint for congressperson
