# src/api/v1/routes/congressperson/index.js
@@ -6,5 +6,6 @@ const congresspersonController = require('./congressperson.controller');
 const router = express.Router();
 
 router.get('/', congresspersonController.getCongresspersonList);
+router.get('/:slug', congresspersonController.getCongresspersonDetail);
 
 module.exports = router;
